@startuml
skinparam classAttributeIconSize 0

entity Concert {
    *concert_id: BIGINT <<PK>>
    --
    name: VARCHAR
    artist: VARCHAR
}

entity Venue {
    *venue_id: BIGINT <<PK>>
    --
    name: VARCHAR
    address: VARCHAR
    seat_count: INT
}

entity ConcertDate {
    *concert_date_id: BIGINT <<PK>>
    *concert_id: BIGINT <<FK>>
    *venue_id: BIGINT <<FK>>
    --
    date: DATETIME
}

entity User {
  *user_id: UUID <<PK>>
  --
  phone: VARCHAR
  created_at: DATETIME
}

entity PointHistory {
    *history_id: BIGINT <<PK>>
    *point_id: BIGINT <<FK>>
    --
    type: VARCHAR
    amount: LONG
    created_at: DATETIME
}

entity Point {
    *point_id: BIGINT <<PK>>
    --
    user_id: UUID <<FK>>
    balance: LONG
}

entity QueueToken {
  *token_id: VARCHAR <<PK>>
  --
  user_id: UUID <<FK>>
  position: INT
  valid: BOOLEAN
  created_at: DATETIME
}

entity Reservation {
  *reservation_id: BIGINT <<PK>>
  --
  user_id: UUID <<FK>>
  status: VARCHAR
  created_at: DATETIME
}

entity ReservationItem {
  *reservation_id: BIGINT <<FK>>
  *seat_id: BIGINT <<FK>>
}

entity Seat {
  *seat_id: BIGINT <<PK>>
  --
  reservation_id: UUID <<FK>>
  concert_date_id: BIGINT <<FK>>
  seat_number: INT
  seat_status: VARCHAR
}

entity Payment {
  *payment_id: BIGINT <<PK>>
  --
  reservation_id: BIGINT <<FK>>
  amount: INT
  paid_at: DATETIME
}

Concert ||--o{ ConcertDate : ""
Venue ||--o{ ConcertDate : ""
User ||--o{ QueueToken : ""
User ||--|| Point : ""
Point ||--o{ PointHistory : ""
User ||--o{ Reservation : ""
Reservation ||--o{ ReservationItem : ""
ReservationItem ||--|| Seat : ""
ConcertDate ||--o{ Seat : ""
Reservation ||--|| Payment : ""

@enduml